# alumy-qt

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  alumy-config.cmake.in  alumy-qt.pri  ascii.c  build.sh  cmake_gen.sh  log.c  mod_log.cpp  publish.sh  publish_release.sh  sleep.cpp  spdlog.cpp  version.c
.github/workflows/: release.yml
audio/: CMakeLists.txt  wav_file.cpp
cmake/: alumy-qt-config.cmake.in  cal_parallel_level.cmake  ccache.cmake  check_type_size.cmake  dependencies.cmake  git-hash.cmake  github_mirror.cmake  message.cmake  qmake.cmake  svn-revision.cmake  system_info.cmake
cmake/patches/: watchdogd-confdir.patch
cmake/toolchain/: aarch64-linux-gnu-flags.cmake  aarch64-linux-gnu.cmake  arm-buildroot-linux-musleabi-flags.cmake  arm-buildroot-linux-musleabi.cmake  arm-linux-gnueabi-flags.cmake  arm-linux-gnueabi.cmake  clang.cmake  compiler.cmake  compiler_target.cmake  gcc.cmake  toolchain-flags.cmake
crc/: crc32.c
include/: alumy.h
include/alumy/: alumyconfig_dft.h  ascii.h  base.h  bit.h  bug.h  byteorder.h  byteswap.h  check.h  crc.h  defs.h  errno.h  git_hash.h  log.h  mod_log.h  net.h  singleton.h  sleep.h  spdlog.h  svn_revision.h  svn_revision.h.in  types.h  usb.h  version.h  version.h.in
include/alumy/audio/: wav_file.h
include/alumy/net/: host_slip.h  host_slip_remote.h  slip.h
include/alumy/usb/: probe.h
include/alumy/xyzmodem/: ymodem.h
net/: CMakeLists.txt  host_slip.cpp  host_slip_remote.cpp  slip.cpp
protobuf-c/: CMakeLists.txt  protobuf-c.c
reentrant/: reentrant.pri
reentrant/qpcpp/: qf_port.cpp  qp_config.hpp  qpn.cpp
test_fetchcontent_project/: CMakeLists.txt  main.cpp
usb/: probe.cpp
xyzmodem/: ymodem.c
